# medtech-edge-analytics

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: context.md
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/smoke-test/: action.yml
.github/workflows/: ci.yml  contract-drift-check.yml  release.yml  vendor-telemetry-contract.yml
contracts/: README.md
contracts/vitals/: v2.0.json
models/: README.md  sepsis_model.tflite
src/: __init__.py  __main__.py
src/inference/: __init__.py  sepsis_scorer.py  tflite_model.py  vital_buffer.py
src/mqtt/: __init__.py  mqtt_client.py  mqtt_payload.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_contract_schema_v2.py  test_mqtt_integration.py  test_sepsis_scorer.py  test_tflite_model.py  test_vital_buffer.py
tests/fixtures/: sample_vitals.json
tools/: check_ci.sh  convert_model_for_qemu.py
