[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_system"

[project]
name = "medtech-edge-analytics"
version = "0.1.0"
description = "Edge AI for sepsis detection using TensorFlow Lite"
authors = [{name = "Chaithanya Balakavi"}]
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=1.6.1,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "tensorflow>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # Missing docstring
    "R0913",  # Too many arguments
]